--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "k6": "^0.0.0",
+    "newrelic": "^8.17.0",
+    "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   }
 }
