--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "server": "node server/index.js"
+  },
+
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
